#25 - print logs with started tasks descending by date with task duration