@@ -12,13 +12,14 @@ import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.List;
 
 public class FileManager {
 
     private final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
     private String headers;
     private ArrayList<Log> logList = new ArrayList<>();
-    public static final String FILE_PATH = "src/main/resources/timeTracker.csv";
+    public static final String FILE_PATH = "src/main/resources/Report1.csv";
     public static final String DELIMITER = ";";
 
     //Method that loads a data file
@@ -27,35 +28,36 @@ public class FileManager {
     }
 
     //Method that loads subsequent lines as String
-    public ArrayList readFile() {
-        var path = loadPath();
-        ArrayList readedLines = new ArrayList<>();
+    public List<Log> readFile() {
+        Path path = loadPath();
+        List<String> readedLines = new ArrayList<>();
         try {
-            readedLines = (ArrayList) Files.readAllLines(path);
+            readedLines = Files.readAllLines(path);
         } catch (IOException ex) {
             System.out.println("File does not exist");
         }
 
-        //Create header and remove from readed list
-        headers = (String) readedLines.getFirst();
-        readedLines.removeFirst();
+        // Create header and remove from read list
+        if (!readedLines.isEmpty()) {
+            headers = readedLines.get(0);
+            readedLines.remove(0);
+        }
 
-        ArrayList logs = toLogObject(readedLines);
-        return logs;
+        return toLogObject(readedLines);
     }
 
     // The method retrieves a series of data corresponding to lines in the file
     // and then creates Log objects and fills them with data
 
-    private ArrayList<Log> toLogObject(ArrayList<String> readedFile) {
-        ArrayList<Log> logs = new ArrayList<>();
-        for (var line : readedFile) {
+    private List<Log> toLogObject(List<String> readFile) {
+        List<Log> logs = new ArrayList<>();
+        for (String line : readFile) {
             String[] l = line.split(DELIMITER);
-            var task = new Task(l[0]);
-            var project = new Project(l[1]);
-            var time = LocalDateTime.parse(l[2], FORMATTER);
-            var status = Status.valueOf(l[3]);
-            var log = new Log(task, project, time, status);
+            Task task = new Task(l[0]);
+            Project project = new Project(l[1]);
+            LocalDateTime time = LocalDateTime.parse(l[2], FORMATTER);
+            Status status = Status.valueOf(l[3]);
+            Log log = new Log(task, project, time, status);
             logs.add(log);
         }
         return logs;
@@ -87,7 +89,7 @@ public class FileManager {
         }
     }
 
-    public void printLogs(ArrayList<Log> logs) {
+    public void printLogs(List<Log> logs) {
         for (var log : logs) {
             var sb = new StringBuilder();
             sb.append(log.getTask().getName()).
